--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 ./gradlew :OttoChecks:build
-
 ln ~/git/LintDemo/SickAppProject/OttoChecks/build/libs/OttoChecks-1.0.jar OttoChecks-1.0.jar
-
 ./gradlew :SickApp:build :SickApp:lint
+~/git/LintDemo/SickAppProject/SickApp/build/lint/ReleaseOutput.html
 
-/Users/phammond/git/LintDemo/SickAppProject/SickApp/build/lint/ReleaseOutput.html
+https://android.googlesource.com/platform/tools/base/+/master/lint/libs/lint-checks/src/main/java/com/android/tools/lint/checks
